# waepic

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml  shell.nix
waepic/: Cargo.toml
waepic-client/: Cargo.toml
waepic-client/examples/: pair_code.rs  qr_pair.rs
waepic-client/src/: config.rs  download.rs  error.rs  lib.rs  update.rs
waepic-client/src/client/: auth.rs  context.rs  handlers.rs  messages.rs  mod.rs  pair.rs  signal_adapter.rs  updates.rs
waepic-client/src/message/: input_media.rs  input_message.rs  mod.rs  msg.rs
waepic-client/src/peer/: group.rs  mod.rs  newsletter.rs  other.rs  user.rs
waepic-client/tests/: integration.rs
waepic-connection/: Cargo.toml
waepic-connection/src/: connection.rs  error.rs  frame.rs  lib.rs  noise_socket.rs  transport.rs
waepic-session/: Cargo.toml
waepic-session/src/: chat.rs  error.rs  lib.rs  memory.rs  session.rs
waepic-session/src/sqlite/: app_sync_store.rs  device_store.rs  mod.rs  msg_secret_store.rs  protocol_store.rs  session.rs  signal_store.rs
waepic/src/: lib.rs
