[workspace]
resolver = "3"
members = ["waepic-client", "waepic-session"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
waepic-client = { path = "waepic-client" }
waepic-session = { path = "waepic-session" }

wacore-binary = { version = "0.6", default-features = false }
waproto = "0.6"

async-lock = "3.4"
compio = "0.19"
thiserror = "2.0"

[profile.bench]
inherits = "release"
debug = 1
strip = false
lto = "thin"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = 1
strip = false
