[workspace]
resolver = "3"
members = ["waepic", "waepic-client", "waepic-connection", "waepic-session"]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
waepic-client = { path = "waepic-client" }
waepic-connection = { path = "waepic-connection" }
waepic-session = { path = "waepic-session" }

wacore = {
  git = "https://github.com/oxidezap/whatsapp-rust",
  rev = "bda9bb",
  default-features = false
}
wacore-binary = {
  git = "https://github.com/oxidezap/whatsapp-rust",
  rev = "bda9bb",
  default-features = false
}
waproto = {
  git = "https://github.com/oxidezap/whatsapp-rust",
  rev = "bda9bb",
}

anyhow = "1"
async-broadcast = "0.7"
async-channel = "2.5"
async-fs = "2.2"
async-global-executor = "2"
async-io = "2.6"
async-lock = "3.4"
async-net = "2"
async-signal = "0.2"
async-trait = "0.1"
async-tungstenite = { version = "0.34", default-features = false }
buffa = "0.8"
bytes = "1.12"
chrono = "0.4"
compio = "0.19"
futures-channel = "0.3"
futures-io = "0.3"
futures-timer = "3.0"
futures-util = "0.3"
http = "1.4"
qr2term = "0.3"
rand = "0.10"
reqwest = {
  version = "0.13",
  default-features = false,
  features = ["http2", "stream"]
}
rustls = "0.23"
thiserror = "2.0"
tokio = { version = "1", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
webpki-roots = "1.0"

[profile.bench]
inherits = "release"
debug = 1
strip = false
lto = "thin"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = 1
strip = false
