[package]
name = "waepic-client"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
waepic-connection.workspace = true
waepic-session.workspace = true

wacore.workspace = true
wacore-binary.workspace = true
waproto.workspace = true

anyhow.workspace = true
async-broadcast.workspace = true
async-channel.workspace = true
async-lock.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures-timer.workspace = true
futures-util.workspace = true
prost.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true

compio.workspace = true

[dev-dependencies]
flate2.workspace = true
waepic-connection.workspace = true
