[package]
name = "waepic-client"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
waepic-connection.workspace = true
waepic-session.workspace = true

wacore.workspace = true
wacore-binary.workspace = true
waproto.workspace = true

anyhow.workspace = true
async-broadcast.workspace = true
async-channel.workspace = true
async-global-executor.workspace = true
async-lock.workspace = true
async-trait.workspace = true
buffa.workspace = true
bytes.workspace = true
chrono.workspace = true
futures-timer.workspace = true
futures-util.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true

compio.workspace = true

[dev-dependencies]
async-signal.workspace = true
compio = { workspace = true, features = ["macros"] }
qr2term.workspace = true
tracing-subscriber.workspace = true
