[package]
name = "waepic-client"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
waepic-connection.workspace = true
waepic-session.workspace = true

wacore.workspace = true
wacore-binary.workspace = true
waproto.workspace = true

anyhow.workspace = true
async-broadcast.workspace = true
async-channel.workspace = true
async-fs.workspace = true
async-global-executor.workspace = true
async-lock.workspace = true
async-trait.workspace = true
buffa.workspace = true
bytes.workspace = true
chrono.workspace = true
futures-timer.workspace = true
futures-util.workspace = true
rand.workspace = true
reqwest = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
async-signal.workspace = true
compio = { workspace = true, features = ["macros"] }
qr2term.workspace = true
tracing-subscriber.workspace = true

[features]
default = []

download = ["dep:reqwest"]
simd = ["wacore/simd", "waepic-connection/simd", "waepic-session/simd"]

# Async runtime
smol = ["waepic-connection/smol"]
tokio = ["waepic-connection/tokio"]

# TLS implementation
native-tls = ["reqwest/native-tls", "waepic-connection/native-tls"]
rustls = ["reqwest/rustls", "waepic-connection/rustls"]
