[package]
name = "waepic-connection"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wacore.workspace = true
wacore-binary.workspace = true

anyhow.workspace = true
async-broadcast.workspace = true
async-channel.workspace = true
async-global-executor.workspace = true
async-lock.workspace = true
async-net.workspace = true
async-trait.workspace = true
async-tungstenite.workspace = true
buffa.workspace = true
bytes.workspace = true
futures-channel.workspace = true
futures-io.workspace = true
futures-timer.workspace = true
futures-util.workspace = true
http.workspace = true
rustls.workspace = true
thiserror.workspace = true
tokio = {
  workspace = true,
  features = ["net", "rt", "sync", "time"],
  optional = true
}
tracing.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
compio.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["rustls", "smol"]

smol = ["async-tungstenite/smol-runtime"]
tokio = ["async-tungstenite/tokio-runtime", "dep:tokio"]

# TLS implementation (enables both smol and tokio variants)
native-tls = [
  "async-tungstenite/smol-native-tls",
  "async-tungstenite/tokio-native-tls",
]
rustls = [
  "async-tungstenite/futures-rustls-webpki-roots",
  "async-tungstenite/tokio-rustls-webpki-roots",
]
