[package]
name = "waepic-session"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wacore.workspace = true
wacore-binary.workspace = true

async-lock.workspace = true
async-trait.workspace = true
bytes.workspace = true
thiserror.workspace = true

[dev-dependencies]
compio = { workspace = true, features = ["macros"] }
