[package]
name = "waepic-session"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wacore.workspace = true
wacore-binary.workspace = true

async-lock.workspace = true
async-trait.workspace = true
bytes.workspace = true
rusqlite = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
compio = { workspace = true, features = ["macros"] }

[features]
default = []

simd = ["wacore/simd"]
sqlite-storage = ["dep:rusqlite", "dep:serde_json"]
