[package]
name = "waepic"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
waepic-client.workspace = true
waepic-connection.workspace = true
waepic-session.workspace = true

[features]
default = ["simd"]

simd = ["waepic-client/simd", "waepic-connection/simd", "waepic-session/simd"]
sqlite-storage = ["waepic-session/sqlite-storage"]

# Async runtime
smol = ["waepic-client/smol", "waepic-connection/smol"]
tokio = ["waepic-client/tokio", "waepic-connection/tokio"]

# TLS implementation
native-tls = ["waepic-client/native-tls", "waepic-connection/native-tls"]
rustls = ["waepic-client/rustls", "waepic-connection/rustls"]
